welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:18: error: illegal start of simple expression
	while ()
               ^Diagonal:19: error: ')' expected but '}' found.
}
^